# MIDS_Capstone

api/: Dockerfile  deploy.sh  pyproject.toml
api/infra/: config_map.yaml  deployment-project.yaml  deployment-redis.yaml  secret.yaml  service-prediction.yaml  service-redis.yaml
api/infra_overlay/: kustomization.yaml  virtual-service.yaml
api/src/: Qdrant_search.py  main.py
api/static/: about.html  contact.html  index.html  main.js  research.html  research.ipynb
api/static/css/: main.css
